[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SceneTransitionRect.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/LevelGoal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Parallax.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sprites/Tileset32x32.tres" type="TileSet" id=6]
[ext_resource path="res://addons/gut/fonts/CourierPrime-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://addons/gut/fonts/CourierPrime-BoldItalic.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scenes/Enemy/LeftCamera.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Enemy/RightCameraWithReceiver.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Interactables/ActivatorPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Interactables/ReceiverDoor.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Interactables/Box.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 7 )

[node name="ExampleLevel" type="Node2D"]

[node name="Parallax" parent="." instance=ExtResource( 5 )]

[node name="16x16" type="TileMap" parent="."]
z_index = -10
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -1572826, 32, 0, -1572825, 32, 1, -1572824, 32, 2, -1507290, 32, 65536, -1507289, 32, 65537, -1507288, 32, 65538, -1441754, 32, 0, -1441753, 32, 0, -1441752, 32, 0, -1114015, 536870944, 0, -1114014, 536870944, 1, -1114013, 536870944, 1, -1114012, 536870944, 2, -1048479, 536870944, 65536, -1048478, 536870944, 65537, -1048477, 536870944, 65537, -1048476, 536870944, 65538, -982978, 32, 0, -982977, 32, 0, -982964, 32, 0, -982963, 32, 0, -982962, 32, 0, -982961, 33, 0, -982943, 536870944, 0, -982942, 536870944, 0, -982941, 536870944, 0, -982940, 536870944, 0, -851991, 32, 0, -851990, 32, 1, -851989, 32, 1, -851988, 32, 1, -851987, 32, 2, -851986, 33, 0, -917406, 3, 196608, -917404, 3, 0, -917402, 3, 65536, -917400, 3, 196608, -786455, 32, 65536, -786454, 32, 65537, -786453, 32, 65537, -786452, 32, 0, -786451, 32, 0, -786450, 32, 0, -786449, 32, 0, -786448, 32, 0, -720919, 32, 65536, -720918, 32, 65537, -720917, 32, 65537, -720916, 32, 0, -786320, 3, 196608, -786318, 3, 65536, -786315, 3, 196608, -786314, 3, 196608, -786313, 3, 196608, -655383, 32, 65536, -655382, 32, 65537, -655381, 32, 65537, -655380, 32, 0, -589847, 32, 65536, -589846, 32, 65537, -589845, 32, 65537, -589844, 32, 0, -655243, 3, 196608, -655242, 3, 196608, -655241, 3, 196608, -524311, 32, 65536, -524310, 32, 65537, -524309, 32, 65537, -524308, 32, 0, -458775, 32, 65536, -458774, 32, 65537, -458773, 32, 65537, -458772, 32, 0, -524178, 3, 196608, -524172, 3, 0, -524170, 3, 65536, -524168, 3, 65536, -524164, 3, 196608, -393239, 32, 131072, -393238, 32, 131073, -393237, 32, 131073, -393236, 32, 0, -393196, 3, 196608, -393194, 3, 0, -393192, 3, 65536, -393190, 3, 196608, -393160, 3, 196608, -393156, 3, 196608, -393122, 3, 196608, -393118, 3, 131072, -393116, 3, 0, -393112, 3, 65536, -393110, 3, 196608, -327571, 4, 0, -327570, 1, 65537, -262114, 4, 1, -262088, 3, 196608, -262086, 3, 65536, -262084, 3, 196608, -196578, 4, 65538, -196577, 4, 1 )

[node name="Activator2" parent="." instance=ExtResource( 11 )]
position = Vector2( 1904.59, -102.847 )
id = 2

[node name="Door" parent="." instance=ExtResource( 12 )]
position = Vector2( 1689.92, -207.711 )
id = 2

[node name="Door2" parent="." instance=ExtResource( 12 )]
position = Vector2( 1574.49, -206.543 )
id = 2

[node name="Activator" parent="." instance=ExtResource( 11 )]
position = Vector2( 406.707, -76.264 )
id = 1

[node name="Player" parent="." groups=[
"Player",
] instance=ExtResource( 3 )]
position = Vector2( -71.947, -0.594604 )
airMoveSpeed = 5.0
groundMoveSpeed = 150.0
gravity = 500.0
jumpForce = 200.0
snapLength = 5.0
slopeSlideThreshold = 60.0
dashLength = 0.3
dashSpeed = 400

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.1
drag_margin_right = 0.1
editor_draw_drag_margin = true

[node name="32x32" type="TileMap" parent="."]
z_index = 10
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -1572826, 32, 0, -1572825, 32, 1, -1572824, 32, 2, -1507290, 32, 65536, -1507289, 32, 65537, -1507288, 32, 65538, -1441754, 32, 65536, -1441753, 32, 65537, -1441752, 32, 65538, -1376218, 32, 65536, -1376217, 32, 65537, -1376216, 32, 65538, -1310708, 32, 0, -1310707, 32, 1, -1310706, 32, 2, -1310682, 33, 65538, -1310681, 32, 65537, -1310680, 536870945, 65538, -1245172, 32, 65536, -1245171, 32, 65537, -1245170, 32, 65538, -1245146, 33, 65538, -1245145, 32, 65537, -1245144, 536870945, 65538, -1179636, 32, 65536, -1179635, 32, 65537, -1179634, 32, 65538, -1179610, 33, 65538, -1179609, 32, 65537, -1179608, 536870945, 65538, -1179598, 31, 0, -1179597, 31, 1, -1179596, 31, 1, -1179595, 31, 1, -1179594, 31, 1, -1179593, 31, 1, -1179592, 31, 1, -1179591, 31, 1, -1179590, 31, 1, -1179589, 31, 1, -1179588, 31, 1, -1179587, 31, 2, -1114100, 32, 0, -1114099, 32, 0, -1114098, 32, 0, -1114074, 33, 0, -1114073, 32, 0, -1114072, 536870945, 0, -1114062, 31, 0, -1114061, 31, 0, -1114060, 31, 0, -1114059, 31, 0, -1114058, 31, 0, -1114057, 31, 0, -1114056, 31, 0, -1114055, 31, 65537, -1114054, 31, 65537, -1114053, 31, 65537, -1114052, 31, 65537, -1114051, 31, 65538, -1114015, 536870944, 0, -1114014, 536870944, 1, -1114013, 536870944, 1, -1114012, 536870944, 2, -1048520, 31, 0, -1048519, 31, 131073, -1048518, 31, 131073, -1048517, 31, 131073, -1048516, 31, 131073, -1048515, 31, 131074, -1048479, 536870944, 65536, -1048478, 536870944, 65537, -1048477, 536870944, 65537, -1048476, 536870944, 65538, -982966, 32, 0, -982965, 32, 1, -982964, 32, 1, -982963, 32, 1, -982962, 32, 2, -982961, 33, 0, -982943, 536870944, 65536, -982942, 536870944, 65537, -982941, 536870944, 65537, -982940, 536870944, 65538, -851991, 32, 0, -851990, 32, 1, -851989, 32, 1, -851988, 32, 0, -917430, 32, 65536, -917429, 32, 65537, -917428, 32, 65537, -917427, 32, 65537, -917426, 32, 65538, -917425, 32, 0, -917424, 32, 1, -917423, 32, 1, -917422, 32, 1, -917421, 32, 1, -917420, 32, 1, -917419, 32, 2, -917418, 33, 0, -917407, 536870944, 65536, -917406, 536870944, 65537, -917405, 536870944, 65537, -917404, 536870944, 65538, -786455, 32, 65536, -786454, 32, 65537, -786453, 32, 65537, -786452, 32, 0, -851894, 32, 65536, -851893, 32, 65537, -851892, 32, 65537, -851891, 32, 65537, -851890, 32, 65538, -851889, 32, 65536, -851888, 32, 65537, -851887, 32, 65537, -851886, 32, 65537, -851885, 32, 65537, -851884, 32, 65537, -851883, 32, 65538, -851882, 33, 4, -851881, 33, 0, -851871, 536870944, 65536, -851870, 536870944, 65537, -851869, 536870944, 65537, -851868, 536870944, 65538, -720919, 32, 65536, -720918, 32, 65537, -720917, 32, 65537, -720916, 32, 0, -786358, 32, 65536, -786357, 32, 65537, -786356, 32, 65537, -786355, 32, 65537, -786354, 32, 65538, -786353, 32, 65536, -786352, 32, 65537, -786351, 32, 65537, -786350, 32, 65537, -786349, 32, 65537, -786348, 32, 65537, -786347, 32, 65538, -786346, 32, 65537, -786345, 33, 4, -786344, 33, 0, -786335, 536870944, 65536, -786334, 536870944, 65537, -786333, 536870944, 65537, -786332, 536870944, 65538, -655383, 32, 65536, -655382, 32, 65537, -655381, 32, 65537, -655380, 32, 0, -720822, 32, 65536, -720821, 32, 65537, -720820, 32, 65537, -720819, 32, 65537, -720818, 32, 65538, -720817, 32, 65536, -720816, 32, 65537, -720815, 32, 65537, -720814, 32, 65537, -720813, 32, 65537, -720812, 32, 65537, -720811, 32, 65538, -720810, 32, 65537, -720809, 32, 65537, -720808, 33, 4, -720807, 33, 0, -720799, 536870944, 65536, -720798, 536870944, 65537, -720797, 536870944, 65537, -720796, 536870944, 65538, -589847, 32, 65536, -589846, 32, 65537, -589845, 32, 65537, -589844, 32, 0, -655286, 32, 65536, -655285, 32, 65537, -655284, 32, 65537, -655283, 32, 65537, -655282, 32, 65538, -655281, 32, 65536, -655280, 32, 65537, -655279, 32, 65537, -655278, 32, 65537, -655277, 32, 65537, -655276, 32, 65537, -655275, 32, 65538, -655274, 32, 65537, -655273, 32, 65537, -655272, 32, 65537, -655271, 33, 4, -655270, 33, 0, -655263, 536870944, 65536, -655262, 536870944, 65537, -655261, 536870944, 65537, -655260, 536870944, 65538, -524311, 32, 65536, -524310, 32, 65537, -524309, 32, 65537, -524308, 32, 0, -589750, 32, 65536, -589749, 32, 65537, -589748, 32, 65537, -589747, 32, 65537, -589746, 32, 65538, -589745, 32, 65536, -589744, 32, 65537, -589743, 32, 65537, -589742, 32, 65537, -589741, 32, 65537, -589740, 32, 65537, -589739, 32, 65538, -589738, 32, 65537, -589737, 32, 65537, -589736, 32, 65537, -589735, 32, 65537, -589734, 33, 4, -589733, 33, 0, -589727, 536870944, 65536, -589726, 536870944, 65537, -589725, 536870944, 65537, -589724, 536870944, 65538, -458775, 32, 65536, -458774, 32, 65537, -458773, 32, 65537, -458772, 32, 0, -524239, 0, 0, -524238, 0, 1, -524237, 0, 1, -524236, 0, 2, -524214, 32, 131072, -524213, 32, 131073, -524212, 32, 131073, -524211, 32, 131073, -524210, 32, 131074, -524209, 32, 131072, -524208, 32, 131073, -524207, 32, 131073, -524206, 32, 131073, -524205, 32, 131073, -524204, 32, 131073, -524203, 32, 131074, -524202, 32, 65537, -524201, 32, 65537, -524200, 32, 65537, -524199, 32, 65537, -524198, 32, 65537, -524197, 33, 4, -524196, 33, 4, -524195, 32, 2, -524191, 536870944, 65536, -524190, 536870944, 65537, -524189, 536870944, 65537, -524188, 536870944, 65538, -393239, 32, 131072, -393238, 32, 131073, -393237, 32, 131073, -393236, 32, 0, -458703, 2, 0, -458702, 2, 1, -458701, 2, 1, -458700, 2, 3, -458696, 0, 0, -458695, 0, 1, -458694, 0, 1, -458693, 0, 1, -458692, 0, 1, -458691, 0, 1, -458690, 0, 2, -458667, 32, 65536, -458666, 32, 65537, -458665, 32, 65537, -458664, 32, 65537, -458663, 32, 65537, -458662, 32, 65537, -458661, 32, 65537, -458660, 32, 65537, -458659, 32, 65538, -458655, 536870944, 65536, -458654, 536870944, 65537, -458653, 536870944, 65537, -458652, 536870944, 65538, -393169, 0, 0, -393168, 0, 1, -393167, 0, 1, -393166, 0, 1, -393165, 0, 1, -393164, 0, 1, -393163, 0, 2, -393160, 2, 0, -393159, 2, 1, -393158, 2, 2, -393157, 2, 1, -393156, 0, 65537, -393155, 0, 65537, -393154, 0, 65538, -393131, 32, 131072, -393130, 32, 131073, -393129, 32, 131073, -393128, 32, 131073, -393127, 32, 131073, -393126, 32, 131073, -393125, 32, 131073, -393124, 32, 131073, -393123, 32, 131074, -393119, 536870944, 131072, -393118, 536870944, 131073, -393117, 536870944, 131073, -393116, 536870944, 131074, -327633, 0, 65536, -327632, 0, 65537, -327631, 0, 65537, -327630, 0, 65537, -327629, 0, 65537, -327628, 0, 65537, -327627, 0, 65538, -327625, 0, 0, -327624, 0, 65537, -327623, 0, 65537, -327622, 0, 65537, -327621, 2, 1, -327620, 0, 65537, -327619, 0, 65537, -327618, 0, 65538, -262134, 0, 0, -262133, 0, 1, -262132, 0, 1, -262131, 0, 2, -262116, 0, 0, -262115, 0, 1, -262114, 0, 2, -262106, 0, 0, -262105, 0, 1, -262104, 0, 1, -262103, 0, 1, -262102, 0, 1, -262101, 0, 1, -262100, 0, 2, -262097, 0, 65536, -262096, 0, 65537, -262095, 0, 65537, -262094, 0, 65537, -262093, 0, 65537, -262092, 0, 65537, -262091, 0, 65538, -262089, 2, 0, -262088, 2, 2, -262087, 2, 2, -262086, 2, 1, -262084, 2, 1, -262083, 2, 2, -262082, 2, 3, -196598, 2, 0, -196597, 2, 1, -196596, 2, 1, -196595, 2, 3, -196580, 2, 0, -196579, 2, 2, -196578, 2, 3, -196570, 0, 65536, -196569, 0, 65537, -196568, 0, 65537, -196567, 0, 65537, -196566, 0, 65537, -196565, 0, 65537, -196564, 0, 65538, -196561, 2, 0, -196560, 2, 2, -196559, 2, 1, -196557, 2, 2, -196556, 2, 1, -196555, 2, 3, -196553, 0, 65537, -196552, 0, 65537, -196551, 0, 65537, -196550, 0, 65537, -196549, 0, 65537, -196548, 0, 65537, -196547, 0, 65537, -196546, 0, 65538, -131064, 0, 0, -131063, 0, 1, -131062, 0, 1, -131061, 0, 1, -131060, 0, 1, -131059, 0, 1, -131058, 0, 1, -131044, 2, 0, -131043, 2, 1, -131042, 2, 3, -131034, 0, 65536, -131033, 0, 65537, -131032, 0, 65537, -131031, 0, 65537, -131030, 0, 65537, -131029, 0, 65537, -131028, 0, 65538, -131026, 0, 0, -131025, 0, 65537, -131024, 0, 65537, -131023, 0, 65537, -131022, 0, 65537, -131021, 0, 65537, -131020, 0, 65537, -131019, 0, 65537, -131018, 0, 1, -131017, 0, 65537, -131016, 0, 65537, -131015, 0, 65537, -131014, 0, 65537, -131013, 0, 65537, -131012, 0, 65537, -131011, 0, 65537, -131010, 0, 65538, -65528, 0, 65536, -65527, 0, 65537, -65526, 0, 65537, -65525, 0, 65537, -65524, 0, 65537, -65523, 0, 65537, -65522, 0, 65537, -65521, 0, 1, -65520, 0, 2, -65519, 0, 1, -65518, 0, 1, -65517, 0, 1, -65516, 0, 1, -65515, 0, 1, -65514, 0, 1, -65513, 0, 1, -65512, 0, 1, -65511, 0, 1, -65510, 0, 1, -65509, 0, 1, -65508, 0, 1, -65507, 0, 1, -65506, 0, 1, -65505, 0, 1, -65504, 0, 1, -65503, 0, 1, -65502, 0, 2, -65498, 0, 65536, -65497, 0, 65537, -65496, 0, 65537, -65495, 0, 65537, -65494, 0, 65537, -65493, 0, 65537, -65492, 0, 65538, -65490, 0, 65536, -65489, 0, 65537, -65488, 0, 65537, -65487, 0, 65537, -65486, 0, 65537, -65485, 0, 65537, -65484, 0, 65537, -65483, 0, 65537, -65482, 0, 65537, -65481, 0, 65537, -65480, 0, 65537, -65479, 0, 65537, -65478, 0, 65537, -65477, 0, 65537, -65476, 0, 65537, -65475, 0, 65537, -65474, 0, 65538, 8, 0, 65536, 9, 0, 65537, 10, 0, 65537, 11, 0, 65537, 12, 0, 65537, 13, 0, 65537, 14, 0, 65537, 15, 0, 65537, 16, 0, 65537, 17, 0, 65537, 18, 0, 65537, 19, 0, 65537, 20, 0, 65537, 21, 0, 65537, 22, 0, 65537, 23, 0, 65537, 24, 0, 65537, 25, 0, 65537, 26, 0, 65537, 27, 0, 65537, 28, 0, 65537, 29, 0, 65537, 30, 0, 65537, 31, 0, 65537, 32, 0, 65537, 33, 0, 65537, 34, 0, 65538, 38, 0, 65536, 39, 0, 65537, 40, 0, 65537, 41, 0, 65537, 42, 0, 65537, 43, 0, 65537, 44, 0, 65538, 46, 0, 65536, 47, 0, 65537, 48, 0, 65537, 49, 0, 65537, 50, 0, 65537, 51, 0, 65537, 52, 0, 65537, 53, 0, 65537, 54, 0, 65537, 55, 0, 65537, 56, 0, 65537, 57, 0, 65537, 58, 0, 65537, 59, 0, 65537, 60, 0, 65537, 61, 0, 65537, 62, 0, 65538, 131067, 0, 0, 131068, 0, 1, 131069, 0, 1, 131070, 0, 1, 131071, 0, 1, 65536, 0, 1, 65537, 0, 1, 65538, 0, 1, 65539, 0, 1, 65540, 0, 2, 65544, 0, 65536, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65537, 65550, 0, 65537, 65551, 0, 65537, 65552, 0, 65537, 65553, 0, 65537, 65554, 0, 65537, 65555, 0, 65537, 65556, 0, 65537, 65557, 0, 65537, 65558, 0, 65537, 65559, 0, 65537, 65560, 0, 65537, 65561, 0, 65537, 65562, 0, 65537, 65563, 0, 65537, 65564, 0, 65537, 65565, 0, 65537, 65566, 0, 65537, 65567, 0, 65537, 65568, 0, 65537, 65569, 0, 65537, 65570, 0, 65538, 65574, 0, 65536, 65575, 0, 65537, 65576, 0, 65537, 65577, 0, 65537, 65578, 0, 65537, 65579, 0, 65537, 65580, 0, 65538, 65582, 0, 65536, 65583, 0, 65537, 65584, 0, 65537, 65585, 0, 65537, 65586, 0, 65537, 65587, 0, 65537, 65588, 0, 65537, 65589, 0, 65537, 65590, 0, 65537, 65591, 0, 65537, 65592, 0, 65537, 65593, 0, 65537, 65594, 0, 65537, 65595, 0, 65537, 65596, 0, 65537, 65597, 0, 65537, 65598, 0, 65538, 196603, 0, 65536, 196604, 0, 65537, 196605, 0, 65537, 196606, 0, 65537, 196607, 0, 65537, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65538, 131080, 0, 65536, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65537, 131087, 0, 65537, 131088, 0, 65537, 131089, 0, 65537, 131090, 0, 65537, 131091, 0, 65537, 131092, 0, 65537, 131093, 0, 65537, 131094, 0, 65537, 131095, 0, 65537, 131096, 0, 65537, 131097, 0, 65537, 131098, 0, 65537, 131099, 0, 65537, 131100, 0, 65537, 131101, 0, 65537, 131102, 0, 65537, 131103, 0, 65537, 131104, 0, 65537, 131105, 0, 65537, 131106, 0, 65538, 131110, 0, 65536, 131111, 0, 65537, 131112, 0, 65537, 131113, 0, 65537, 131114, 0, 65537, 131115, 0, 65537, 131116, 0, 65538, 131118, 0, 65536, 131119, 0, 65537, 131120, 0, 65537, 131121, 0, 65537, 131122, 0, 65537, 131123, 0, 65537, 131124, 0, 65537, 131125, 0, 65537, 131126, 0, 65537, 131127, 0, 65537, 131128, 0, 65537, 131129, 0, 65537, 131130, 0, 65537, 131131, 0, 65537, 131132, 0, 65537, 131133, 0, 65537, 131134, 0, 65538, 262139, 0, 65536, 262140, 0, 65537, 262141, 0, 65537, 262142, 0, 65537, 262143, 0, 65537, 196608, 0, 65537, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65538, 196616, 0, 65536, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 196621, 0, 65537, 196622, 0, 65537, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65537, 196627, 0, 65537, 196628, 0, 65537, 196629, 0, 65537, 196630, 0, 65537, 196631, 0, 65537, 196632, 0, 65537, 196633, 0, 65537, 196634, 0, 65537, 196635, 0, 65537, 196636, 0, 65537, 196637, 0, 65537, 196638, 0, 65537, 196639, 0, 65537, 196640, 0, 65537, 196641, 0, 65537, 196642, 0, 65538, 196646, 0, 65536, 196647, 0, 65537, 196648, 0, 65537, 196649, 0, 65537, 196650, 0, 65537, 196651, 0, 65537, 196652, 0, 65538, 196654, 0, 65536, 196655, 0, 65537, 196656, 0, 65537, 196657, 0, 65537, 196658, 0, 65537, 196659, 0, 65537, 196660, 0, 65537, 196661, 0, 65537, 196662, 0, 65537, 196663, 0, 65537, 196664, 0, 65537, 196665, 0, 65537, 196666, 0, 65537, 196667, 0, 65537, 196668, 0, 65537, 196669, 0, 65537, 196670, 0, 65538, 327675, 0, 65536, 327676, 0, 65537, 327677, 0, 65537, 327678, 0, 65537, 327679, 0, 65537, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65538, 262152, 0, 65536, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65537, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 65537, 262163, 0, 65537, 262164, 0, 65537, 262165, 0, 65537, 262166, 0, 65537, 262167, 0, 65537, 262168, 0, 65537, 262169, 0, 65537, 262170, 0, 65537, 262171, 0, 65537, 262172, 0, 65537, 262173, 0, 65537, 262174, 0, 65537, 262175, 0, 65537, 262176, 0, 65537, 262177, 0, 65537, 262178, 0, 65538, 262182, 0, 65536, 262183, 0, 65537, 262184, 0, 65537, 262185, 0, 65537, 262186, 0, 65537, 262187, 0, 65537, 262188, 0, 65538, 262190, 0, 131072, 262191, 0, 131073, 262192, 0, 131073, 262193, 0, 131073, 262194, 0, 131073, 262195, 0, 131073, 262196, 0, 131073, 262197, 0, 131073, 262198, 0, 131073, 262199, 0, 131073, 262200, 0, 65537, 262201, 0, 65537, 262202, 0, 65537, 262203, 0, 65537, 262204, 0, 65537, 262205, 0, 65537, 393211, 0, 65536, 393212, 0, 65537, 393213, 0, 65537, 393214, 0, 65537, 393215, 0, 65537, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65538, 327688, 0, 65536, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65537, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 65537, 327699, 0, 65537, 327700, 0, 65537, 327701, 0, 65537, 327702, 0, 65537, 327703, 0, 65537, 327704, 0, 65537, 327705, 0, 65537, 327706, 0, 65537, 327707, 0, 65537, 327708, 0, 65537, 327709, 0, 65537, 327710, 0, 65537, 327711, 0, 65537, 327712, 0, 65537, 327713, 0, 65537, 327714, 0, 65538, 458747, 0, 65536, 458748, 0, 65537, 458749, 0, 65537, 458750, 0, 65537, 458751, 0, 65537, 393216, 0, 65537, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65538, 393224, 0, 65536, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65537, 393231, 0, 65537, 393232, 0, 65537, 393233, 0, 65537, 393234, 0, 65537, 393235, 0, 65537, 393236, 0, 65537, 393237, 0, 65537, 393238, 0, 65537, 393239, 0, 65537, 393240, 0, 65537, 393241, 0, 65537, 393242, 0, 65537, 393243, 0, 65537, 393244, 0, 65537, 393245, 0, 65537, 393246, 0, 65537, 393247, 0, 65537, 393248, 0, 65537, 393249, 0, 65537, 393250, 0, 65538, 524283, 0, 65536, 524284, 0, 65537, 524285, 0, 65537, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65538, 458760, 0, 65536, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65537, 458766, 0, 65537, 458767, 0, 65537, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65537, 458771, 0, 65537, 458772, 0, 65537, 458773, 0, 65537, 458774, 0, 65537, 458775, 0, 65537, 458776, 0, 65537, 458777, 0, 65537, 458778, 0, 65537, 458779, 0, 65537, 458780, 0, 65537, 458781, 0, 65537, 458782, 0, 65537, 458783, 0, 65537, 458784, 0, 65537, 458785, 0, 65537, 458786, 0, 65538, 589819, 0, 65536, 589820, 0, 65537, 589821, 0, 65537, 589822, 0, 65537, 589823, 0, 65537, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65538, 524296, 0, 131072, 524297, 0, 131073, 524298, 0, 131073, 524299, 0, 131073, 524300, 0, 131073, 524301, 0, 131073, 524302, 0, 131073, 524303, 0, 131073, 524304, 0, 131073, 524305, 0, 131073, 524306, 0, 131073, 524307, 0, 131073, 524308, 0, 131073, 524309, 0, 131073, 524310, 0, 131073, 524311, 0, 131073, 524312, 0, 131073, 524313, 0, 131073, 524314, 0, 131073, 524315, 0, 131073, 524316, 0, 131073, 524317, 0, 131073, 524318, 0, 131073, 524319, 0, 131073, 524320, 0, 131073, 524321, 0, 131073, 524322, 0, 131074, 655355, 0, 65536, 655356, 0, 65537, 655357, 0, 65537, 655358, 0, 65537, 655359, 0, 65537, 589824, 0, 65537, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65538, 720891, 0, 131072, 720892, 0, 131073, 720893, 0, 131073, 720894, 0, 131073, 720895, 0, 131073, 655360, 0, 131073, 655361, 0, 131073, 655362, 0, 131073, 655363, 0, 131073, 655364, 0, 131074 )

[node name="LevelGoal" parent="." instance=ExtResource( 4 )]
position = Vector2( 1648.54, -207.068 )
sceneTransitionPath = NodePath("../CanvasLayer/SceneTransitionRect")

[node name="Box" parent="." instance=ExtResource( 13 )]
position = Vector2( 68.058, 12.3748 )
scale = Vector2( 1.2, 1.2 )

[node name="RCameraRec" parent="." instance=ExtResource( 10 )]
position = Vector2( 444.927, -117.489 )

[node name="CameraHead" parent="RCameraRec" index="0"]
rotation = 0.785398

[node name="ReceiverCamera" parent="RCameraRec" index="1"]
id = 1

[node name="LCamera" parent="." instance=ExtResource( 9 )]
position = Vector2( 883.395, -113.702 )

[node name="FieldOfView" parent="LCamera/CameraHead" index="0"]
detectRadius = 250.0
viewAngle = 70.0
losSpeed = 9.0

[node name="Box3" parent="." instance=ExtResource( 13 )]
position = Vector2( 644.704, -50.3893 )

[node name="Box2" parent="." instance=ExtResource( 13 )]
position = Vector2( 966.75, -142.891 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="CanvasLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOptions" type="VBoxContainer" parent="CanvasLayer/Pause"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -51.5
margin_right = 224.0
margin_bottom = 183.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Label" parent="CanvasLayer/Pause/PauseOptions"]
margin_right = 174.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Paused"

[node name="Resume" type="Button" parent="CanvasLayer/Pause/PauseOptions"]
margin_top = 59.0
margin_right = 174.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
flat = true
align = 0

[node name="Menu" type="Button" parent="CanvasLayer/Pause/PauseOptions"]
margin_top = 104.0
margin_right = 174.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 2 )
text = "Menu"
flat = true
align = 0

[node name="Restart" type="Button" parent="CanvasLayer/Pause/PauseOptions"]
margin_top = 149.0
margin_right = 174.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 2 )
text = "Restart"
flat = true
align = 0

[node name="Exit" type="Button" parent="CanvasLayer/Pause/PauseOptions"]
margin_top = 194.0
margin_right = 174.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 2 )
text = "Exit"
flat = true
align = 0

[node name="SceneTransitionRect" parent="CanvasLayer" instance=ExtResource( 2 )]
pause_mode = 2
visible = false
margin_left = -253.11
margin_top = -149.68
margin_right = -253.11
margin_bottom = -149.68
rect_scale = Vector2( 12.5768, 7.37932 )

[connection signal="pressed" from="CanvasLayer/Pause/PauseOptions/Resume" to="CanvasLayer/Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/PauseOptions/Menu" to="CanvasLayer/Pause" method="_on_Menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/PauseOptions/Restart" to="CanvasLayer/Pause" method="_on_Restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/PauseOptions/Exit" to="CanvasLayer/Pause" method="_on_Exit_pressed"]

[editable path="RCameraRec"]
[editable path="LCamera"]
